--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -1,7 +1,6 @@
 /*
  * Globals
  */
-
 @media (min-width: 48em) {
   html {
     font-size: 18px;
@@ -13,37 +12,22 @@ body {
   color: #555;
 }
 
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3,
-h4,
-.h4,
-h5,
-.h5,
-h6,
-.h6 {
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: #333;
 }
 
-
 /*
  * Override Bootstrap's default container.
  */
-
 .container {
   max-width: 60rem;
 }
 
-
 /*
  * Masthead for nav
  */
-
 .blog-masthead {
   margin-bottom: 3rem;
   background-color: #428bca;
@@ -85,7 +69,6 @@ h6,
 /*
  * Blog name and description
  */
-
 .blog-header {
   padding-bottom: 1.25rem;
   margin-bottom: 2rem;
@@ -107,12 +90,9 @@ h6,
   }
 }
 
-
 /*
  * Main column and sidebar layout
  */
-
-/* Sidebar modules for boxing content */
 .sidebar-module {
   padding: 1rem;
 }
@@ -140,13 +120,17 @@ h6,
 /*
  * Blog posts
  */
-
 .blog-post {
   margin-bottom: 2rem;
 }
 .blog-post-title {
   margin-bottom: .25rem;
   font-size: 2.0rem;
+}
+@media (min-width: 40em) {
+  h1.blog-post-title {
+    font-size: 2.5rem;
+  }
 }
 .blog-post-title a {
   color: #333;
@@ -160,11 +144,9 @@ h6,
   color: #555;
 }
 
-
 /*
  * Footer
  */
-
 .blog-footer {
   padding: 2.5rem 0;
   color: #999;
